Update pom.xml to force allow dynamic agent loading in tests
Signed-off-by: Ashley <73482956+ascopes@users.noreply.github.com>